...
                implemented: "Completed",
                inReview: "In Review",
                planned: "Planned",
                inProgress: "In Progress",
                completed: "Completed",
                wishlist: "Feature Requests",
                save: "Save",
                title: "Title",
                description: "Description",
                upvote: "Upvote",
                info: "Info",
                youCanOnlyVoteOnce: "You can only vote once.",
                youCanNotVoteForAnImplementedWish: "You can not vote for a feature that is already implemented.",
                youCanNotVoteForYourOwnWish: "You cannot vote for your own feature request.",
                poweredBy: "Powered by",
...
